Fix some alignment and proximity bugs in the solver

--- a/static/css/Canvas.css
+++ b/static/css/Canvas.css
@@ -277,7 +277,7 @@ body {
 }
 
 .design-canvas .widget-control-leaf {
-	z-index: 1000; 
+	z-index: 500; 
 }
 
 .design-canvas.design-canvas-hovered {
